# coverage-gh

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  README.rst  action.yaml  setup.cfg
.github/workflows/: action.yaml  package.yaml  test.yaml
coverage_gh/: __init__.py  __main__.py  summary.md.template
coverage_gh/tests/: event.json  example.coverage  test_all.py
