[metadata]
name = coverage-gh
url = http://github.com/khaeru-coverage-gh
long_description_content_type = text/x-rst

[options]
packages = coverage_gh
include_package_data = True
install_requires =
    click
    coverage
    jinja2
    requests

[options.extras_require]
tests =
    pytest
    pytest-cov

[flake8]
max-line-length = 88
